--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -69,4 +69,8 @@
   .card-body {
     @apply px-4 py-4 sm:p-6;
   }
+
+  .router-link-exact-active {
+    @apply text-indigo-600 font-semibold;
+  }
 }
